# Quantpilot

./: .gitignore  README.md  docker-compose.dev.yml
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/analysis/: __init__.py  metrics.py  report.py
backend/app/api/routes/: __init__.py  backtests.py  data.py  health.py  optimization.py  strategies.py
backend/app/core/: __init__.py  config.py  errors.py  logging.py
backend/app/data/: __init__.py  akshare_provider.py  csv_ingest.py  csv_provider.py  mock_provider.py  models.py  provider.py  registry.py
backend/app/engine/: __init__.py  backtest.py  broker.py  costs.py  events.py  portfolio.py
backend/app/optimization/: __init__.py  grid_search.py  sensitivity.py
backend/app/schemas/: __init__.py  backtest.py  optimization.py
backend/app/services/: __init__.py  backtest_service.py
backend/app/storage/: __init__.py  run_store.py
backend/app/strategy/: __init__.py  base.py  indicators.py  registry.py  user_store.py
backend/app/strategy/templates/: __init__.py  bollinger.py  dual_ma.py  macd.py  rsi.py  turtle.py
backend/data/strategies/: dual_ma_custom.json
backend/tests/: conftest.py  test_api.py  test_backtest_end_to_end.py  test_data_provider.py  test_indicators.py  test_metrics.py  test_optimization.py  test_strategy_extensions.py  test_strategy_management.py  test_strategy_registry.py
docs/: DEVELOPMENT.md  Strategy.md  StrategyManagement.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.json  (+1 more)
(+34 files in other folders)
